@@ -2,6 +2,7 @@ ubuntu-release-upgrader (1:22.10.8) UNRELEASED; urgency=medium
 
   * DistUpgrade: Cast to int when calling QProgressBar.setValue() (LP: #1991096)
   * DistUpgrade: Just pass filename to apport report (LP: #1985964)
+  * DistUpgrade: Remove firefox from deb2snap.json (LP: #1964036)
 
  -- Nick Rosbrook <nick.rosbrook@canonical.com>  Wed, 28 Sep 2022 16:25:09 -0400
 
